<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.go4lunch.activities.chat.ChatActivity"
    >

    <!-- RECYCLER VIEW CONTAINER -->
    <!-- Toolbar Importation -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/activity_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/activity_chat_add_message_container"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">


        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/activity_chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:text="@string/text_view_chat_error"
            android:textAlignment="center" />

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin"
        android:visibility="visible">

        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/text_input_title_chat_activity"
            android:visibility="visible"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/activity_chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_chat_activity"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"/>

    </LinearLayout>

</RelativeLayout>