<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="available_workmate">Available Workmate</string>

    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="main_activity_description">Find a nice restaurant and invite your co-worker for lunch!</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">2938113756306629</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2938113756306629</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_no_email_found">No e-mail found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="user_avatar">User Avatar</string>
    <string name="username">UserName</string>
    <string name="e_mail">e-mail</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="No_restaurant_selected_yet">No restaurant selected yet</string>

    <!-- Bottom navigation view -->
    <string name="bottom_navigation_menu_map_view">Map View</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_website">WebsiteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="n_street">N° street</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>

    <string name="is_joining">is joining!</string>
    <string name="hungry">I\'m hungry!</string>
    <string name="alert">Alert</string>
    <string name="auth_gps">To use this feature you need to activate GPS, do you want to activate it ?</string>
    <string name="is_eating_at"> is eating at </string>
    <string name="hasnt_decided"> hasn\'t decided yet</string>
    <string name="lunch_pressed">YOUR LUNCH PRESSED !</string>
    <string name="setting_pressed">\"SETTING PRESSED ! \"</string>
    <string name="no_phone_number">No phone number registered !</string>
    <string name="add_a_like">You\'ve just add a like !</string>
    <string name="no_website">Website doesn\'t exist !</string>

    <!-- CHAT ACTIVITY -->
    <string name="toolbar_title_chat_activity">Chat</string>
    <string name="text_input_title_chat_activity">Compose your message</string>
    <string name="button_title_chat_activity">SEND</string>
    <string name="text_view_chat_error">This discussion thread does not currently contain any messages.&#8230;</string>
    <string name="popup_title_permission_files_access">This app needs permission to work.</string>
    <string name="toast_title_no_image_chosen">No image chosen&#8230;</string>
    <string name="chat">CHAT</string>
    <string name="notification_title">your lunch</string>
    <string name="default_notification_channel_id">101</string>

<!--    notifications-->
    <string name="notifications_on">Notications on !</string>
    <string name="notifications_off">Notications off !</string>
    <string name="enable_notifications_once_per_day">enable notifications (once per day)</string>
    <string name="notification_message_with_restId">Today you have lunch at : </string>
    <string name="notification_message_without_restId">You don\'t have  choose  where to eat yet !</string>
</resources>
