...
        android:background="@drawable/rounded_btn"
        >


        <!-- TEXT MESSAGE CONTAINER -->
        <LinearLayout
            android:id="@+id/activity_chat_item_message_container_text_message_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- TEXT MESSAGE -->
                <TextView
                    android:id="@+id/activity_chat_item_message_container_text_message_container_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/default_text_size"
...
