<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map_view"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/bottom_navigation_menu_map_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list_view"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/bottom_navigation_menu_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />
</menu>